# oauth-https-proxy-client

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
examples/: config.example.yml  usage_examples.sh
src/oauth_proxy_client/: __init__.py  cli.py  py.typed
src/oauth_proxy_client/commands/: __init__.py  certificates.py  logs.py  oauth.py  proxies.py  reports.py  resources.py  routes.py  services.py  system.py  tokens.py  workflows.py
src/oauth_proxy_client/core/: __init__.py  auth.py  client.py  config.py  exceptions.py  logging.py
src/oauth_proxy_client/formatters/: __init__.py  base.py  csv_formatter.py  enhanced_table.py  json_formatter.py  table_formatter.py  yaml_formatter.py
